---
title: Command class diagram
---
classDiagram
    class ICommand {
      <<interface>>
      +execute()
      +undo()
    }

    class Light {
      -isOn : boolean
      +turnOn()
      +turnOff()
      +status()
    }

    class TurnOnCommand {
      -receiver : Light
      +execute()
      +undo()
    }

    class TurnOffCommand {
      -receiver : Light
      +execute()
      +undo()
    }

    class RemoteControl {
      -undoStack : ICommand[]
      -redoStack : ICommand[]
      +run(command : ICommand)
      +undo()
      +redo()
    }

    ICommand <|.. TurnOnCommand
    ICommand <|.. TurnOffCommand
    TurnOnCommand --> Light : receiver
    TurnOffCommand --> Light : receiver
    RemoteControl --> ICommand : invoke/history
